# houston-cloud-infra

./: .gitignore  CLAUDE.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
container/: .dockerignore  .env.example  Dockerfile  Dockerfile.control-plane  docker-compose.yml
control-plane/: .env.example  Cargo.toml
control-plane/src/: auth.rs  idle_sweeper.rs  main.rs  routes.rs  session.rs  tenant.rs
control-plane/src/k8s/: manifests.rs  mod.rs
docs/: local-development.md
k8s/base/: control-plane.yaml  envoy-cors.yaml  envoy-gateway.yaml  gateway-dev.yaml  gateway.yaml  namespaces.yaml  network-policies.yaml  tenant-pod-template.yaml
supabase/migrations/: 001_tenants.sql  002_restrict_tenant_token.sql
terraform/envs/dev/: .terraform.lock.hcl  main.tf  terraform.tfvars.example
terraform/modules/artifact-registry/: main.tf
terraform/modules/gke-cluster/: main.tf
terraform/modules/vpc/: main.tf
