[package]
name = "houston-cloud-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "houston-cloud-api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
kube = { version = "0.98", features = ["client", "runtime"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "16"
